# nhs-ae-forecast

./: .env.example  .gitignore  Makefile  README.md  nhs_ae_2020_2026.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py  utils.py
app/: Dashboard.py  dashboard.py
app/pages/: Forecast.py  Model_Comparison.py  Organisation_Analysis.py  Overview.py  forecast.py
data/processed/: forecast_feature_importance.csv  forecast_predictions.csv  model_comparison.csv  nhs_ae_full_2020_2026.csv  nhs_ae_model_ready_with_features.csv  regional_summary_2020_2026.csv  top_10_12plus_waits_2020_2026.csv  top_10_over4_waits_2020_2026.csv
models/: lstm_model.keras  xgboost_model.json
nhs_ae_sql_analysis.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: 01_data_analysis.ipynb  02_forecasting_model.ipynb  03_xgboost_forecasting.ipynb  04_lstm_forecasting.ipynb  05_model_comparison.ipynb  06_external_features_enrichment.ipynb  cleaned_nhs_ae_feb_2026.csv  nhs_ae_analysis.ipynb  nhs_ae_feb_2026.db  regional_summary.csv  top_10_12plus_waits.csv  top_10_over4_waits.csv
sql/: 01_national_summary.sql  02_top_attendance_orgs.sql  03_over4_waits.sql  04_long_waits.sql  05_regional_summary.sql  06_rankings.sql  sql_queries.sql
src/: app_data.py  charts.py  config.py  data_loader.py  external_features.py  forecasting.py  payloads.py  project_utils.py
tests/: test_api_utils.py  test_data_loader.py  test_project_utils.py
